--- a/RotinaPedagogica/AndroidManifest.xml
+++ b/RotinaPedagogica/AndroidManifest.xml
@@ -1,27 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="main.br.eti.minoda.rotinapedagogica"
-    android:versionCode="1"
-    android:versionName="1.0" >
+      package="br.eti.minoda.rotinapedagogica"
+      android:versionCode="1"
+      android:versionName="1.0.0">
+    <uses-sdk android:minSdkVersion="10" />
 
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="18" />
-
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name="main.br.eti.minoda.rotinapedagogica.MainActivity"
-            android:label="@string/app_name" >
+    <application android:icon="@drawable/rpr" android:label="@string/app_name">
+        <activity android:name="br.eti.minoda.rotinapedagogica.RotinaPedagogicaPagerActivity"
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+    </application>
 </manifest>
